# SimpleLlamaInfer

./: .cursorignore  .gitignore  CMakeLists.txt  README.md  run_with_env.sh
.cache/clangd/index/: add.cpp.49B3E51314647F08.idx  add.h.8D6F97064745A90B.idx  add_kernel.cpp.9CBCAA45958F1E60.idx  add_kernel.cu.8272FD4C296FA41B.idx  add_kernel.cuh.E447BA7FBECAFADB.idx  add_kernel.h.7142547FE1D635B6.idx  alloc.cpp.8ACC45D79C4AFC89.idx  alloc.h.C878D20A1F442FD9.idx  alloc_cpu.cpp.F57B11ADB271EC86.idx  alloc_cu.cpp.0E726177E872BFD6.idx  argmax_kernel.cu.AF7C3D320E2DBD48.idx  argmax_kernel.cuh.4780E3799BD4396A.idx  argmax_sampler.cpp.B58CB08BADE820E3.idx  argmax_sampler.h.65F9C48C3EA81853.idx  base.cpp.57C25680EA05B286.idx  base.h.06FC69A2929B2E59.idx  buffer.cpp.53296D0C5ED3C988.idx  buffer.h.5ED8D1854DCCA274.idx  config.h.4B87CB80BE7D11F0.idx  cuda_config.h.1EF5A0CC97BAD366.idx  emb_kernel.cpp.C388C97934283101.idx  emb_kernel.cu.BF00E9E4B62263B1.idx  emb_kernel.cuh.7C00699D287605C7.idx  emb_kernel.h.32C8CD4F8A8FD089.idx  embedding.cpp.B46B13AE715E504C.idx  embedding.h.CF556A699162ABEF.idx  encode.cpp.34B080552F595891.idx  encode.h.AF98458D7A0157D5.idx  kernels_interface.h.D7BB57D6CEBA0137.idx  kernels_interfaces.cpp.3085E4CA36D2D1DE.idx  layer.cpp.21E229F182448003.idx  layer.h.EF594991B23AF041.idx  llama3.cpp.4F96942080D44792.idx  llama3.h.03C3F5CC84319583.idx  main.cpp.42895A08B3E17F9A.idx  matmul.cpp.3ECF44008379BF2D.idx  matmul.h.BE9030A74B997F88.idx  matmul_kernel.cpp.BC2DAAFCC57CCC23.idx  matmul_kernel.cu.5FE37582382C3C70.idx  matmul_kernel.cuh.97DC25A2A3C8C761.idx  (+63 more)
benchmark/: CMakeLists.txt  latency_benchmark.cpp  memory_benchmark.cpp
demo/: CMakeLists.txt  main.cpp
demo/benchmark/: accuracy_benchmark.cpp  benchmark_utils.h  performance_test.cpp
examples/: CMakeLists.txt  main.cpp
infer/include/base/: alloc.h  base.h  buffer.h  cuda_macros.h  tick.h  tiktoken.h
infer/include/model/: config.h  llama3.h  model.h  qwen2.h  qwen3.h
infer/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h
infer/include/sampler/: argmax_sampler.h  sampler.h
infer/include/tensor/: tensor.h
infer/source/base/: alloc_cpu.cpp  alloc_cu.cpp  buffer.cpp
infer/source/model/: llama3.cpp  model.cpp
infer/source/op/: add.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp
infer/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
infer/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  mha_kernel.cpp  rope_kernel.cpp
infer/source/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  swiglu_kernel.cu
infer/source/sampler/: argmax_sampler.cpp
infer/source/tensor/: tensor.cpp
kuiper/include/base/: cuda_config.h
kuiper/include/model/: llama3.h  model.h
kuiper/include/op/: layer.h
kuiper/include/tensor/: tensor.h
kuiper/source/model/: llama3.cpp  model.cpp  raw_model_data.cpp
kuiper/source/op/: layer.cpp
kuiper/source/op/kernels/: kernels_interface.h
kuiper/source/op/kernels/cuda/: rmsnorm_kernel.cu
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp
test/test_model/: test_llama_cpu.cpp
test/test_op/: test_cu_matmul.cpp  test_load.cpp
tools/: llama3_infer.py
